--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -7,11 +7,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-x: hidden;
 }
 
 .page {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   box-sizing: border-box;
   display: flex;
@@ -19,12 +18,13 @@ body {
 }
 
 .content {
+  box-sizing: border-box;
   margin-top: clamp(3.5rem, 10vw, 5rem);
   margin-bottom: clamp(7rem, 10vw, 10rem);
   margin-inline: auto;
-  padding-inline: 1rem;
-  width: 100%;
-  max-width: $content-width;
+  padding-inline: .5rem;
+  width: $content-width;
+  max-width: 100%;
 }
 
 .about {
